# copsearch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
src/copsearch/: __init__.py  cache.py  cli.py  filters.py  fork.py  normalize.py  render_cli.py  render_html.py  session.py  sidecar.py  tui.py  view_tui.py
tests/: test_cache.py  test_cli_fork.py  test_filters.py  test_fork.py  test_normalize.py  test_render_cli.py  test_render_html.py  test_session.py  test_view_tui.py
